--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   width: 100%;
   position: fixed;
   z-index: 9999;
-  background-color:#1D1A39;
+  background: linear-gradient(#09203F , #537895);
   padding: 25vh 10vw;
 }
 
@@ -286,4 +286,85 @@ body {
 
 .card:hover {
     transform: scale(1.05);
+}
+
+@media (max-width:600px) {
+
+  #loader {
+      height: 100%;
+      width: 100%;
+      position: fixed;
+      z-index: 999999;
+      background-color: #030303;
+      padding: 25vh 5vw;
+  }
+
+  .line {
+      /* background-color: red; */
+      height: -webkit-fit-content;
+      height: -moz-fit-content;
+      height: fit-content;
+      overflow: hidden;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: flex-start;
+      gap: 3vw;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+  }
+
+  #line1-part1 {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      gap: 1vw;
+
+  }
+
+  #line1-part1 h5,
+  #line1-part1 h6 {
+      font-size: 4vw;
+      font-weight: 100;
+      font-family: 'silk serif';
+  }
+
+  #line1-part1 h5 {
+      /* background-color: red; */
+      width: 5vw;
+      text-align: right;
+  }
+
+  .line h1 {
+      font-size: 8.5vw;
+      text-transform: uppercase;
+      font-weight: 900;
+  }
+
+  .line h2 {
+      font-size: 8vw;
+      text-transform: uppercase;
+      font-weight: 900;
+      opacity: 0;
+      /* animation-name: loaderAnim */
+      -webkit-animation-duration: 2s;
+              animation-duration: 2s;
+
+      /* display: none; */
+      -webkit-animation-iteration-count: infinite;
+              animation-iteration-count: infinite;
+  }
 }
