--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
   width: 100%;
   position: fixed;
   z-index: 9999;
-  background: linear-gradient(#09203F , #537895);
+  /* background: linear-gradient(#09203F , #537895); */
+  background-color:  #D91B5B;
   padding: 25vh 10vw;
 }
 
@@ -229,7 +230,8 @@ body {
   animation-duration: 30s;
   animation-iteration-count: infinite;
   box-shadow: 0px 0px 5px 0px #fdfdfd40;
-  background-image: url("Assets/Rac.jpg");
+  /* background-image: url("Assets/Rac.jpg"); */
+  background-color:#D91B5B;
   background-position: center;
   background-size: cover;
 }
@@ -295,7 +297,7 @@ body {
       width: 100%;
       position: fixed;
       z-index: 999999;
-      background-color: #030303;
+      background-color: #D91B5B;
       padding: 25vh 5vw;
   }
 
